# zkill-history-importer

./: Cargo.toml  Dockerfile  README.md
.aws/: task-definition.json
.github/workflows/: aws.yml  docker-image.yml
dev/: export.ps1  restart-rebuild-app.ps1
prod/: prod_config.json
src/: main.rs
src/models/: api.rs  app_config.rs  config.rs  mod.rs
