[package]
name = "zkill-history-importer"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.22.0", features = ["full"] }
mongodb = "2.3.1"
serde_json = "1.0.89"
serde = "1.0.147"
log = "0.4.17"
log4rs = { version = "1.2.0", features = ["rolling_file_appender", "size_trigger", "compound_policy"] }
reqwest = { version = "0.11.13", features = ["json", "gzip"] }
chrono = "0.4.23"
