[package]
name = "zkill-history-importer"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.23.1", features = ["full"] }
mongodb = "2.3.1"
serde_json = "1.0.89"
serde = "1.0.147"
reqwest = { version = "0.11.13", features = ["json", "gzip"] }
chrono = "0.4.23"
config = "0.13.3"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16",  features = ["std", "fmt", "json"] }
