[package]
name = "zkill-history-importer"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.25.0", features = ["full"] }
mongodb = "2.3.1"
serde_json = "1.0.91"
serde = "1.0.152"
reqwest = { version = "0.11.14", features = ["json", "gzip"] }
chrono = "0.4.23"
config = "0.13.3"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16",  features = ["std", "fmt", "json"] }
